--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "vite --mode development",
 		"build:dev": "vite build --mode development",
-		"build:prod": "vite build --mode production",
+		"build": "vite build --mode production",
 		"build:test": "vite build --mode test",
 		"serve": "vite preview --mode production",
 		"lint": "eslint .",
