--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.26.2",
 		"react-vant": "^3.3.5",
-		"redux": "^5.0.1"
+		"redux": "^5.0.1",
+		"vite-plugin-commonjs": "^0.10.1"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
