--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"build:test": "vite build --mode test",
 		"serve": "vite preview --mode production",
 		"lint": "eslint .",
+		"deploy": "gh-pages -d dist",
 		"preview": "vite preview"
 	},
 	"dependencies": {
