--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.2.7",
 		"@twa-dev/sdk": "^7.10.1",
+		"@vitejs/plugin-basic-ssl": "^1.1.0",
+		"eruda": "^3.3.0",
 		"i18next": "^23.15.0",
 		"i18next-browser-languagedetector": "^8.0.0",
 		"i18next-http-backend": "^2.6.1",
